add default directory feature to CmdLineTool